--- a/contact.html
+++ b/contact.html
@@ -73,167 +73,178 @@
             fill="currentColor"
           />
         </svg>
-        <h2 style="display: inline">&nbsp แผนที่</h2>
-        <div class="socialcontent" data-tab="map">
-          <div id="mapapi" style="height: 20rem"></div>
-          <script>
-            var map;
-            function initMap() {
-              var location = {
-                lat: 13.77114693619562,
-                lng: 100.48318640386196,
-              };
-              var map = new google.maps.Map(document.getElementById("mapapi"), {
-                center: location,
-                zoom: 18,
-              });
-              var marker = new google.maps.Marker({
-                position: location,
-                map: map,
-              });
-              var infowindow = new google.maps.InfoWindow({
-                content:
-                  '<div style="padding: 0.5rem; color: var(--clr-neutral-100); font-size: var(--fs-body); font-family: var(--ff-primary);">จิ้มปรินต์</div>',
-              });
-              infowindow.open({
-                anchor: marker,
-                map,
-                shouldFocus: false,
-              });
-            }
-          </script>
-          <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6Bv48LHTT0WG3Oiy7cmZaGPiwJqlEu-M&callback=initMap"
-            async
-            defer
-          ></script>
-          <p id="map" class="content-text">
-            176/5<br />ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ
-            10700
-          </p>
-          <div class="buttonwrap">
-            <button id="copymap">Copy</button>
-            <button
-              onclick=" window.open('https://goo.gl/maps/ey1CJpm6z2xhcqJ57','_blank')"
-            >
-              Open in maps
-            </button>
-          </div>
-          <h2 style="color: red">ระวังหลง หน้าร้านอยู่ฝั่งซอย 21</h2>
-        </div>
-        <br />
-        <svg
-          class="social-icon"
-          data-for-tab="gmail"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          aria-hidden="true"
-          role="img"
-          width="36"
-          height="36"
-          preserveAspectRatio="xMidYMid meet"
-          viewBox="0 0 24 24"
-        >
-          <path
-            d="M20 18h-2V9.25L12 13L6 9.25V18H4V6h1.2l6.8 4.25L18.8 6H20m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
-            fill="currentColor"
-          />
-        </svg>
-        <h2 style="display: inline">&nbsp อีเมล</h2>
-        <div class="socialcontent" data-tab="email">
-          <p id="email" class="content-text">jimmprint.pinklao@gmail.com</p>
-          <div class="buttonwrap">
-            <button id="copyemail">Copy</button>
-            <button
-              onclick="window.open('mailto:jimmprint.pinklao@gmail.com','_blank')"
-            >
-              Open with email
-            </button>
+        <div class="breaker">
+          <h2 style="display: inline">&nbsp แผนที่</h2>
+          <div class="socialcontent" data-tab="map">
+            <div id="mapapi" style="height: 20rem"></div>
+            <script>
+              var map;
+              function initMap() {
+                var location = {
+                  lat: 13.77114693619562,
+                  lng: 100.48318640386196,
+                };
+                var map = new google.maps.Map(
+                  document.getElementById("mapapi"),
+                  {
+                    center: location,
+                    zoom: 18,
+                  }
+                );
+                var marker = new google.maps.Marker({
+                  position: location,
+                  map: map,
+                });
+                var infowindow = new google.maps.InfoWindow({
+                  content:
+                    '<div style="padding: 0.5rem; color: var(--clr-neutral-100); font-size: var(--fs-body); font-family: var(--ff-primary);">จิ้มปรินต์</div>',
+                });
+                infowindow.open({
+                  anchor: marker,
+                  map,
+                  shouldFocus: false,
+                });
+              }
+            </script>
+            <script
+              src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6Bv48LHTT0WG3Oiy7cmZaGPiwJqlEu-M&callback=initMap"
+              async
+              defer
+            ></script>
+            <p id="map" class="content-text">
+              176/5<br />ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
+              กรุงเทพฯ 10700
+            </p>
+            <div class="buttonwrap">
+              <button id="copymap">Copy</button>
+              <button
+                onclick=" window.open('https://goo.gl/maps/ey1CJpm6z2xhcqJ57','_blank')"
+              >
+                Open in maps
+              </button>
+            </div>
+            <h2 style="color: red">ระวังหลง หน้าร้านอยู่ฝั่งซอย 21</h2>
           </div>
         </div>
-        <br />
-        <svg
-          class="social-icon"
-          data-for-tab="phone"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          aria-hidden="true"
-          role="img"
-          width="36"
-          height="36"
-          preserveAspectRatio="xMidYMid meet"
-          viewBox="0 0 24 24"
-        >
-          <path
-            d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02l-2.2 2.2z"
-            fill="currentColor"
-          />
-        </svg>
-        <h2 style="display: inline">&nbsp โทรศัพท์</h2>
-        <div class="socialcontent" data-tab="phone">
-          <p id="phone" class="content-text">0840257778</p>
-          <div class="buttonwrap">
-            <button id="copyphone">Copy</button>
-            <button onclick="window.open('tel:66840257778','_blank')">
-              Call
-            </button>
+        <div class="breaker">
+          <svg
+            class="social-icon"
+            data-for-tab="gmail"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            width="36"
+            height="36"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M20 18h-2V9.25L12 13L6 9.25V18H4V6h1.2l6.8 4.25L18.8 6H20m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"
+              fill="currentColor"
+            />
+          </svg>
+          <h2 style="display: inline">&nbsp อีเมล</h2>
+          <div class="socialcontent" data-tab="email">
+            <p id="email" class="content-text">jimmprint.pinklao@gmail.com</p>
+            <div class="buttonwrap">
+              <button id="copyemail">Copy</button>
+              <button
+                onclick="window.open('mailto:jimmprint.pinklao@gmail.com','_blank')"
+              >
+                Open with email
+              </button>
+            </div>
           </div>
         </div>
-        <br />
-        <svg
-          class="social-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          aria-hidden="true"
-          role="img"
-          width="36"
-          height="36"
-          preserveAspectRatio="xMidYMid meet"
-          viewBox="0 0 24 24"
-        >
-          <path
-            d="M12 2.04c-5.5 0-10 4.49-10 10.02c0 5 3.66 9.15 8.44 9.9v-7H7.9v-2.9h2.54V9.85c0-2.51 1.49-3.89 3.78-3.89c1.09 0 2.23.19 2.23.19v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.88h2.78l-.45 2.9h-2.33v7a10 10 0 0 0 8.44-9.9c0-5.53-4.5-10.02-10-10.02z"
-            fill="currentColor"
-          />
-        </svg>
-        <h2 style="display: inline">&nbsp facebook</h2>
-        <div class="socialcontent" data-tab="facebook">
-          <p id="facebook" class="content-text">facebook.com/jimmprint</p>
-          <div class="buttonwrap">
-            <button id="copyfacebook">Copy</button>
-            <button
-              onclick=" window.open('https://facebook.com/jimmprint','_blank')"
-            >
-              Open
-            </button>
+        <div class="breaker">
+          <svg
+            class="social-icon"
+            data-for-tab="phone"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            width="36"
+            height="36"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M6.62 10.79c1.44 2.83 3.76 5.15 6.59 6.59l2.2-2.2c.28-.28.67-.36 1.02-.25c1.12.37 2.32.57 3.57.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1A17 17 0 0 1 3 4a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.45.57 3.57c.11.35.03.74-.25 1.02l-2.2 2.2z"
+              fill="currentColor"
+            />
+          </svg>
+          <h2 style="display: inline">&nbsp โทรศัพท์</h2>
+          <div class="socialcontent" data-tab="phone">
+            <p id="phone" class="content-text">0840257778</p>
+            <div class="buttonwrap">
+              <button id="copyphone">Copy</button>
+              <button onclick="window.open('tel:66840257778','_blank')">
+                Call
+              </button>
+            </div>
+          </div>
+          <br />
+          <svg
+            class="social-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            width="36"
+            height="36"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 2.04c-5.5 0-10 4.49-10 10.02c0 5 3.66 9.15 8.44 9.9v-7H7.9v-2.9h2.54V9.85c0-2.51 1.49-3.89 3.78-3.89c1.09 0 2.23.19 2.23.19v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.88h2.78l-.45 2.9h-2.33v7a10 10 0 0 0 8.44-9.9c0-5.53-4.5-10.02-10-10.02z"
+              fill="currentColor"
+            />
+          </svg>
+        </div>
+        <div class="breaker">
+          <h2 style="display: inline">&nbsp facebook</h2>
+          <div class="socialcontent" data-tab="facebook">
+            <p id="facebook" class="content-text">facebook.com/jimmprint</p>
+            <div class="buttonwrap">
+              <button id="copyfacebook">Copy</button>
+              <button
+                onclick=" window.open('https://facebook.com/jimmprint','_blank')"
+              >
+                Open
+              </button>
+            </div>
           </div>
         </div>
-        <br />
-        <svg
-          class="social-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          aria-hidden="true"
-          role="img"
-          width="27px"
-          height="36px"
-          preserveAspectRatio="xMidYMid meet"
-          viewBox="0 0 384 512"
-        >
-          <path
-            d="M172.268 501.67C26.97 291.031 0 269.413 0 192C0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67c-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80s-80 35.817-80 80s35.817 80 80 80z"
-            fill="currentColor"
-          />
-        </svg>
-        <h2 style="display: inline">&nbsp line</h2>
-        <div class="socialcontent" data-tab="line">
-          <img src="images/lineqr.png" alt="line" style="display: inline" />
-          <p id="line" class="content-text">@596ysfkn</p>
-          <div class="buttonwrap">
-            <button id="copyline">Copy</button>
-            <button onclick=" window.open('https://lin.ee/zJuSeeB','_blank')">
-              Open
-            </button>
+        <div class="breaker">
+          <br />
+          <svg
+            class="social-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-hidden="true"
+            role="img"
+            width="27px"
+            height="36px"
+            preserveAspectRatio="xMidYMid meet"
+            viewBox="0 0 384 512"
+          >
+            <path
+              d="M172.268 501.67C26.97 291.031 0 269.413 0 192C0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67c-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80s-80 35.817-80 80s35.817 80 80 80z"
+              fill="currentColor"
+            />
+          </svg>
+          <h2 style="display: inline">&nbsp line</h2>
+          <div class="socialcontent" data-tab="line">
+            <img src="images/lineqr.png" alt="line" style="display: inline" />
+            <p id="line" class="content-text">@596ysfkn</p>
+            <div class="buttonwrap">
+              <button id="copyline">Copy</button>
+              <button onclick=" window.open('https://lin.ee/zJuSeeB','_blank')">
+                Open
+              </button>
+            </div>
           </div>
         </div>
       </div>
