--- a/unlist.html
+++ b/unlist.html
@@ -117,7 +117,7 @@
               async
               defer
             ></script>
-            <textarea readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
+            <textarea style="width:100%; resize:none;" readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
