--- a/contact.html
+++ b/contact.html
@@ -117,10 +117,7 @@
               async
               defer
             ></script>
-            <p id="map" class="content-text">
-              176/5<br />ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย
-              กรุงเทพฯ 10700
-            </p>
+            <textarea style="width:100%; resize:none;" readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
@@ -152,7 +149,7 @@
           </svg>
           <h2 style="display: inline">&nbsp อีเมล</h2>
           <div class="socialcontent" data-tab="email">
-            <p id="email" class="content-text">jimmprint.pinklao@gmail.com</p>
+            <input readonly id="email" class="content-text" value="jimmprint.pinklao@gmail.com" />
             <div class="buttonwrap">
               <button id="copyemail">Copy</button>
               <button
@@ -183,7 +180,7 @@
           </svg>
           <h2 style="display: inline">&nbsp โทรศัพท์</h2>
           <div class="socialcontent" data-tab="phone">
-            <p id="phone" class="content-text">0840257778</p>
+            <input readonly id="phone" class="content-text" value="0840257778"/>
             <div class="buttonwrap">
               <button id="copyphone">Copy</button>
               <button onclick="window.open('tel:66840257778','_blank')">
@@ -212,7 +209,7 @@
           </svg>
           <h2 style="display: inline">&nbsp facebook</h2>
           <div class="socialcontent" data-tab="facebook">
-            <p id="facebook" class="content-text">facebook.com/jimmprint</p>
+            <input readonly id="facebook" class="content-text" value="facebook.com/jimmprint"/>
             <div class="buttonwrap">
               <button id="copyfacebook">Copy</button>
               <button
@@ -243,7 +240,8 @@
           <h2 style="display: inline">&nbsp line</h2>
           <div class="socialcontent" data-tab="line">
             <img src="images/lineqr.png" alt="line" style="display: inline" />
-            <p id="line" class="content-text">@596ysfkn</p>
+            <br>
+            <input readonly id="line" class="content-text" value="@596ysfkn"/>
             <div class="buttonwrap">
               <button id="copyline">Copy</button>
               <button onclick=" window.open('https://lin.ee/zJuSeeB','_blank')">
@@ -371,18 +369,16 @@
     </footer>
   </body>
   <script>
-    function copyText(htmlElement) {
-      if (!htmlElement) {
+function copyText(htmlInputElement) {
+      
+      if (!htmlInputElement) {
         return;
       }
-      let elementText = htmlElement.innerText;
-      let inputElement = document.createElement("input");
+      let elementText = htmlInputElement;
       let noti = document.querySelector(".noti");
-      inputElement.setAttribute("value", elementText);
-      document.body.appendChild(inputElement);
-      inputElement.select();
+      
+      elementText.select();
       document.execCommand("copy");
-      inputElement.parentNode.removeChild(inputElement);
 
       noti.classList.add("active");
       function remove() {
@@ -394,16 +390,16 @@
     document.querySelector("#copymap").onclick = function () {
       copyText(document.querySelector("#map"));
     };
-    document.querySelector("#copyemail").onclick = function () {
+     document.querySelector("#copyemail").onclick = function () {
       copyText(document.querySelector("#email"));
     };
-    document.querySelector("#copyphone").onclick = function () {
+     document.querySelector("#copyphone").onclick = function () {
       copyText(document.querySelector("#phone"));
     };
-    document.querySelector("#copyfacebook").onclick = function () {
+     document.querySelector("#copyfacebook").onclick = function () {
       copyText(document.querySelector("#facebook"));
     };
-    document.querySelector("#copyline").onclick = function () {
+     document.querySelector("#copyline").onclick = function () {
       copyText(document.querySelector("#line"));
     };
   </script>
