--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
               async
               defer
             ></script>
-            <textarea style="width:100%; resize:none;" readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
+            <textarea style="text-align: center; width:100%; padding:0.5rem; resize:none;" readonly id="map" class="content-text">176/5 ซ.สมเด็จพระปิ่นเกล้า 19 อรุณอมรินทร์ บางกอกน้อย กรุงเทพฯ 10700</textarea>
             <div class="buttonwrap">
               <button id="copymap">Copy</button>
               <button
@@ -149,7 +149,7 @@
           </svg>
           <h2 style="display: inline">&nbsp อีเมล</h2>
           <div class="socialcontent" data-tab="email">
-            <input readonly id="email" class="content-text" value="jimmprint.pinklao@gmail.com" />
+            <input style="text-align: center; width:100%; padding:0.5rem;" readonly id="email" class="content-text" value="jimmprint.pinklao@gmail.com" />
             <div class="buttonwrap">
               <button id="copyemail">Copy</button>
               <button
@@ -180,7 +180,7 @@
           </svg>
           <h2 style="display: inline">&nbsp โทรศัพท์</h2>
           <div class="socialcontent" data-tab="phone">
-            <input readonly id="phone" class="content-text" value="0840257778"/>
+            <input style="text-align: center; width:100%; padding:0.5rem;" readonly id="phone" class="content-text" value="0840257778"/>
             <div class="buttonwrap">
               <button id="copyphone">Copy</button>
               <button onclick="window.open('tel:66840257778','_blank')">
@@ -209,7 +209,7 @@
           </svg>
           <h2 style="display: inline">&nbsp facebook</h2>
           <div class="socialcontent" data-tab="facebook">
-            <input readonly id="facebook" class="content-text" value="facebook.com/jimmprint"/>
+            <input style="text-align: center; width:100%; padding:0.5rem;" readonly id="facebook" class="content-text" value="facebook.com/jimmprint"/>
             <div class="buttonwrap">
               <button id="copyfacebook">Copy</button>
               <button
@@ -240,8 +240,7 @@
           <h2 style="display: inline">&nbsp line</h2>
           <div class="socialcontent" data-tab="line">
             <img src="images/lineqr.png" alt="line" style="display: inline" />
-            <br>
-            <input readonly id="line" class="content-text" value="@596ysfkn"/>
+            <input style="text-align: center; width:100%; padding:0.5rem;" readonly id="line" class="content-text" value="@596ysfkn"/>
             <div class="buttonwrap">
               <button id="copyline">Copy</button>
               <button onclick=" window.open('https://lin.ee/zJuSeeB','_blank')">
