--- a/main.html
+++ b/main.html
@@ -62,12 +62,12 @@
     </div>
     <div class="container">
       <div class="content">
-        <!--
         <h1>ช่วงนี้ร้านปิดชั่วคราว</h1>
-        <h2>จะกลับมาเปิดตามปกติอีกครั้งคืนวันอาทิตย์ที่ 26 พฤศจิกายน</h2>
-        -->
+        <h2>จะกลับมาเปิดตามปกติอีกครั้งเดือนกรกฎาคม</h2>
+        <!--
         <h1 class="daymessage"></h1>
         <h2 style="text-align:center;">อันนี้เป็นข้อความอัตโนมัติ<br>ถ้าจะเอาชัวร์ให้โทรเช็คก่อนนะครับ</h2>
+        -->
         
         <a
           class="timetabletrigger"
