--- a/jp3d/threetest.html
+++ b/jp3d/threetest.html
@@ -11,6 +11,6 @@
     <div id="experience">
       <canvas id="experience-canvas" class="experience-canvas"></canvas>
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="../src/main.js"></script>
   </body>
 </html>
